<resources>
    <string name="we_come" translatable="false">欢迎使用元讯</string>
    <string name="text_version" translatable="false">版本号 %1$s</string>
    <string name="chat_top" translatable="false">置顶聊天</string>
    <string name="chat_delete" translatable="false">删除聊天</string>
    <string name="quit_chat_top" translatable="false">取消置顶</string>
    <string name="add_friend" translatable="false">添加好友</string>
    <string name="add_group" translatable="false">添加群聊</string>
    <string name="scan_qr_code" translatable="false">扫一扫</string>
    <string name="start_conversation" translatable="false">发起会话</string>
    <string name="create_group_chat" translatable="false">发起群聊</string>
    <string name="create_chat_room" translatable="false">创建聊天室</string>
    <string name="create_private_group" translatable="false">创建讨论组</string>
    <string name="hint_add_user_id" translatable="false">请输入ID</string>
    <string name="hint_add_wording" translatable="false">请输入验证消息</string>
    <string name="contact_add" translatable="false">添加</string>
    <string name="user_id" translatable="false">对方ID</string>
    <string name="add_wording" translatable="false">验证消息</string>
    <string name="tab_contact_tab_text" translatable="false">通讯录</string>
    <string name="tab_conversation_tab_text" translatable="false">消息</string>
    <string name="tab_work_tab_text" translatable="false">工作台</string>
    <string name="tab_profile_tab_text" translatable="false">我</string>
    <string name="profile" translatable="false">我</string>
    <string name="id" translatable="false">账号：%1$s</string>
    <string name="modify_user_icon" translatable="false">修改头像</string>
    <string name="im_user_icon" translatable="false">头像</string>
    <string name="modify_nick_name" translatable="false">修改昵称</string>
    <string name="im_nick_name" translatable="false">昵称</string>
    <string name="im_sex" translatable="false">性别</string>
    <string name="im_city" translatable="false">地区</string>
    <string name="im_signature" translatable="false">个性签名</string>
    <string name="im_phone" translatable="false">手机号</string>
    <string name="im_department" translatable="false">部门</string>
    <string name="modify_department" translatable="false">修改部门</string>
    <string name="im_position" translatable="false">职位</string>
    <string name="modify_im_position" translatable="false">修改职位</string>
    <string name="im_card" translatable="false">工号</string>
    <string name="modify_im_card" translatable="false">修改工号</string>
    <string name="im_email" translatable="false">邮箱</string>
    <string name="modify_im_email" translatable="false">修改邮箱</string>
    <string name="modify_signature" translatable="false">修改个性签名</string>
    <string name="modify_setting" translatable="false">设置</string>
    <string name="add_rule" translatable="false">加我为好友时</string>
    <string name="allow_type_allow_any" translatable="false">允许任何人</string>
    <string name="allow_type_deny_any" translatable="false">拒绝任何人</string>
    <string name="allow_type_need_confirm" translatable="false">需要验证</string>
    <string name="exit" translatable="false">退出登录</string>
    <string name="user_info_title" translatable="false">个人信息</string>
    <string name="user_content_default" translatable="false">待完善</string>
    <string name="user_setting_about" translatable="false">关于我们</string>
    <string name="user_setting_version" translatable="false">检查更新</string>
    <string name="user_setting_cache" translatable="false">清除缓存</string>
    <string name="user_setting_update_pwd" translatable="false">修改密码</string>
    <string name="user_save" translatable="false">保存</string>
    <string name="user_hint_old_pwd" translatable="false">请输入原密码</string>
    <string name="user_hint_new_pwd" translatable="false">请输入新密码</string>
    <string name="user_hint_new_confirm_pwd" translatable="false">请确认新密码</string>
    <string name="user_text_please_wait" translatable="false">请稍等</string>
    <string name="label_select_avatar" translatable="false">选择头像</string>
    <string name="user_select_camera" translatable="false">拍照</string>
    <string name="user_select_phone" translatable="false">相册</string>
    <string name="user_update_phone" translatable="false">请输入新的手机号</string>
    <string name="hint_sms_code" translatable="false">请输入验证码</string>
    <string name="text_sending" translatable="false">正在发送</string>
    <string name="text_sms_timer" translatable="false">剩余%1$d秒</string>
    <string name="text_retry_sms" translatable="false">重新发送</string>
    <string name="text_send_success" translatable="false">发送成功</string>
    <string name="text_send_fail" translatable="false">发送失败</string>
    <string name="text_get_sms_code" translatable="false">获取验证码</string>
    <string name="text_compile" translatable="false">完成</string>
    <string name="text_change_phone" translatable="false">修改手机号</string>
    <string name="text_user_remark" translatable="false">元知智能研究院</string>
    <string name="text_change_audio" translatable="false">切换语音</string>
    <string name="text_hangup_name" translatable="false">挂断</string>
    <string name="text_dialing_name" translatable="false">接听</string>
    <string name="text_change_camera" translatable="false">切换摄像头</string>
    <string name="text_video_close" translatable="false">摄像头</string>
    <string name="text_mute_open" translatable="false">开启静音</string>
    <string name="text_mute_close" translatable="false">关闭静音</string>
    <string name="text_handsfree_1" translatable="false">免提</string>
    <string name="text_handsfree_2" translatable="false">听筒</string>
    <string name="text_login_remark" translatable="false">在元讯与你的同事和朋友进行沟通与协作</string>
    <string name="text_china_phone" translatable="false">+86</string>
    <string name="text_video_tag" translatable="false">正在等待对方接受邀请...</string>
    <string name="text_video_tag_show" translatable="false">邀请您进行视频通话...</string>
    <string name="text_qr_code" translatable="false">我的二维码</string>
    <string name="text_qr_code_remark" translatable="false">扫一扫二维码，加我为好友</string>
    <string name="text_new_contacts_phone" translatable="false">添加手机联系人</string>
    <string name="text_new_contacts_approval_title" translatable="false">好友申请和添加</string>
    <string name="text_contacts_phone_nickname" translatable="false">昵称：%1$s</string>
    <string name="text_contacts_phone_friends" translatable="false">已是好友</string>
    <string name="text_contacts_phone_wait" translatable="false">等待通过</string>
    <string name="text_contacts_phone_download" translatable="false">邀请下载</string>
    <string name="text_contacts_phone_download_sending" translatable="false">正在发送</string>
    <string name="text_contacts_phone_download_ok" translatable="false">邀请成功</string>
    <string name="text_contacts_add_wording" translatable="false">我是 %1$s</string>
    <string name="text_contacts_add_download_success" translatable="false">邀请成功，已发送链接给您的好友...</string>
    <string name="text_agreement_" translatable="false">用户服务协议</string>
    <string name="text_progress_wait" translatable="false">正在匹配数据...</string>
    <string name="text_conceal_" translatable="false">隐私政策</string>
    <string name="hint_user_info_input" translatable="false">未填写</string>
    <string name="hint_user_info_select" translatable="false">未选择</string>
    <string name="hint_user_info_setting" translatable="false">未设置</string>
    <string name="user_gender_0" translatable="false">保密</string>
    <string name="user_gender_1" translatable="false">男</string>
    <string name="user_gender_2" translatable="false">女</string>
    <string name="user_city_select" translatable="false">选择地区</string>
    <string name="im_search_message" translatable="false">搜索聊天记录</string>
    <string name="tips_empty_group_member" translatable="false">请选择群成员</string>
    <string name="tips_empty_group_type" translatable="false">请选择加群方式</string>
    <string name="no_friend_apply" translatable="false">暂无好友申请</string>
    <string name="group_remind" translatable="false">选择提醒的人</string>
    <string name="group_apply_un_handler" translatable="false">有未处理的群申请</string>
    <string name="request_agree" translatable="false">同意</string>
    <string name="request_accepted" translatable="false">已添加</string>
    <string name="request_waiting" translatable="false">等待验证</string>
    <string name="request_hint_user" translatable="false">请输入对方的手机号</string>
    <string name="user_add_friends" translatable="false">添加到通讯录</string>
    <string name="test_custom_action" translatable="false">自定义消息</string>
    <string name="test_custom_message" translatable="false">查看详情>></string>
    <string name="custom_msg" translatable="false">[自定义消息]</string>
    <string name="pic" translatable="false">图片</string>
    <string name="photo" translatable="false">拍照</string>
    <string name="video" translatable="false">摄像</string>
    <string name="file" translatable="false">文件</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="sure" translatable="false">确定</string>
    <string name="un_download" translatable="false">未下载</string>
    <string name="downloaded" translatable="false">已下载</string>
    <string name="downloading" translatable="false">下载中…</string>
    <string name="sending" translatable="false">发送中…</string>
    <string name="sended" translatable="false">已发送</string>
    <string name="has_read" translatable="false">已读</string>
    <string name="unread" translatable="false">未读</string>
    <string name="typing" translatable="false">正在输入…</string>
    <string name="chat_to_top" translatable="false">置顶聊天</string>
    <string name="chat_muted" translatable="false">全员禁言</string>
    <string name="chat_rev_opt" translatable="false">消息免打扰</string>
    <string name="send" translatable="false">发送</string>
    <string name="group_id" translatable="false">群ID</string>
    <string name="group_name" translatable="false">群聊名称</string>
    <string name="group_icon" translatable="false">修改群头像</string>
    <string name="group_notice" translatable="false">群公告</string>
    <string name="group_members" translatable="false">群成员</string>
    <string name="group_members_admin" translatable="false">管理员</string>
    <string name="group_type" translatable="false">群类型</string>
    <string name="add_group_member" translatable="false">添加成员</string>
    <string name="remove_group_member" translatable="false">移除成员</string>
    <string name="join_group_type" translatable="false">加群方式</string>
    <string name="in_group_nick_name" translatable="false">我的群昵称</string>
    <string name="dissolve" translatable="false">解散该群</string>
    <string name="modify_group_name" translatable="false">修改群名称</string>
    <string name="modify_group_notice" translatable="false">修改群公告</string>
    <string name="modify_nick_name_in_goup" translatable="false">修改我的群昵称</string>
    <string name="transfer_group_owner" translatable="false">转让群主</string>
    <string name="group_detail" translatable="false">群聊详情</string>
    <string name="accept" translatable="false">同意</string>
    <string name="refuse" translatable="false">拒绝</string>
    <string name="group_apply_members" translatable="false">群申请</string>
    <string name="group_apply_members_all" translatable="false">全部群申请</string>
    <string name="accepted" translatable="false">已同意</string>
    <string name="refused" translatable="false">已拒绝</string>
    <string name="group_apply_tips" translatable="false">%1$d 条入群申请</string>
    <string name="group_apply_click_handle" translatable="false">点击处理</string>
    <string name="group_remove_member" translatable="false">移出群聊</string>
    <string name="label_update_app_title" translatable="false">版本更新</string>
    <string name="label_update_app_next" translatable="false">稍后提醒</string>
    <string name="label_update_app" translatable="false">马上体验</string>
    <string name="hint_password" translatable="false">密码6～16位，需大小写字母+数字组合</string>
    <string name="hint_password_new" translatable="false">请再次确认您的密码</string>
</resources>