<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/old_password"
        style="@style/EditorStyle"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/user_hint_old_pwd"/>
    <androidx.appcompat.widget.AppCompatEditText
        style="@style/EditorStyle"
        android:id="@+id/new_password"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    <androidx.appcompat.widget.AppCompatEditText
        style="@style/EditorStyle"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/confirm_password"
        android:hint="@string/hint_password_new"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/submit"
        style="@style/ButtonStyleLarge"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/user_save"/>
</LinearLayout>