<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.hlife.qcloud.tim.uikit.component.TitleBarLayout
        android:id="@+id/group_info_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_title_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/CardShadowLayout"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="0dp">
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/group_member_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isBottom="false"
                    app:canNav="true"
                    app:isTop="true"
                    app:name="@string/group_members" />
                <com.hlife.qcloud.tim.uikit.component.GridViewInScrollView
                    android:id="@+id/group_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:horizontalSpacing="@dimen/dp_10"
                    android:verticalSpacing="@dimen/dp_10"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:numColumns="5" />
            </LinearLayout>

            <LinearLayout
                style="@style/CardShadowLayout"
                android:layout_marginBottom="0dp">
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isTop="true"
                    app:name="@string/group_name" />
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/group_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/group_notice" />
            </LinearLayout>
            <com.hlife.qcloud.tim.uikit.component.LineControllerView
                android:id="@+id/group_type_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:name="@string/group_type" />
            <com.hlife.qcloud.tim.uikit.component.LineControllerView
                android:id="@+id/group_account"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/group_id" />
            <com.hlife.qcloud.tim.uikit.component.LineControllerView
                android:id="@+id/group_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/page_margin"
                app:name="@string/group_icon" />

            <com.hlife.qcloud.tim.uikit.component.LineControllerView
                android:id="@+id/join_type_bar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:name="@string/join_group_type" />

            <LinearLayout
                android:id="@+id/group_owner_layout"
                style="@style/CardShadowLayout"
                android:layout_marginBottom="0dp">
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/transfer_group_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isTop="true"
                    app:name="@string/transfer_group_owner"
                    app:canNav="true"/>
            </LinearLayout>

            <LinearLayout
                style="@style/CardShadowLayout"
                android:layout_marginBottom="0dp">

                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/group_member_admin"
                    app:isTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/group_members_admin" />
                <com.hlife.qcloud.tim.uikit.component.GridViewInScrollView
                    android:id="@+id/group_members_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10"
                    android:layout_marginTop="0.5dp"
                    android:background="@color/white"
                    android:numColumns="6" />

                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/self_nickname_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/in_group_nick_name" />
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/rev_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/chat_rev_opt"
                    app:isSwitch="true"/>
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/chat_muted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/chat_muted"
                    app:isSwitch="true"/>
                <com.hlife.qcloud.tim.uikit.component.LineControllerView
                    android:id="@+id/chat_to_top_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:name="@string/chat_to_top"
                    app:isSwitch="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/group_dissolve_button"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/btn_bg_red"
                android:textColor="@color/white" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>

