<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:text="@string/label_select_avatar"
        android:textSize="@dimen/sp_16"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_333333"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/user_select_camera"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_333333"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/user_select_phone"
        android:padding="@dimen/dp_10"
        android:layout_margin="1dp"
        android:textColor="@color/color_333333"/>
</LinearLayout>