<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/search_bg_img"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="40dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_china_phone"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:textSize="@dimen/sp_16"/>
        <View
            android:layout_width="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/color_E4E6E9"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobile"
            style="@style/EditorStyle"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:inputType="number"
            android:hint="@string/user_update_phone"
            android:background="@color/transparent"/>
    </LinearLayout>
    <FrameLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sms_code"
            android:hint="@string/hint_sms_code"
            style="@style/EditorStyle"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/selector_2da0f0_disabled_e6e6e6"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:inputType="number"
            android:textColor="@drawable/selector_2da0f0_disabled_e6e6e6_text"
            android:text="@string/text_get_sms_code"/>
    </FrameLayout>
    <Button
        android:id="@+id/submit"
        style="@style/ButtonStyleLarge"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_compile"/>
</LinearLayout>