<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/defaultColorAccent"
        android:text="@string/label_update_app_title"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:lineSpacingExtra="7dp"
        android:textColor="@color/color_333333"/>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/top_f4_bg_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_2da0f0"
            android:layout_weight="1"
            android:background="@drawable/top_f4_bg_white"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/label_update_app_next"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@color/defaultColorAccent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/label_update_app"/>
    </LinearLayout>
</LinearLayout>